[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsfw-analyzer-pro"
version = "1.0.0"
description = "Приложение для анализа изображений на NSFW-контент"
authors = [{ name = "Vanitoo", email = "t.me/vanitu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow>=2.8.0",
    "opennsfw2>=0.10.2",
    "Pillow>=9.0.0"
]

[project.scripts]
nsfw-analyzer = "main:main"

[tool.ruff]
line-length = 120

# Настройки линтинга
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "RUF", # ruff-specific rules
  "UP"   # pyupgrade
]
ignore = [
  "B904", "EM101", "RUF100", "RUF003", "RUF001", "RUF002"
]
fixable = ["ALL"]
unfixable = ["F401", "F841"]
extend-ignore = ["RUF001"]  # Игнорировать проверку кириллицы в строках

# Настройки isort теперь внутри lint
[tool.ruff.lint.isort]
known-first-party = ["opencv_pdf"]
required-imports = ["from __future__ import annotations"]

# Настройки форматирования
[tool.ruff.format]
indent-style = "space"  # Использовать пробелы вместо табов
quote-style = "double"  # Двойные кавычки

# Игнорирование по файлам
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]